--- a/09/position-absolute2.html
+++ b/09/position-absolute2.html
@@ -1,50 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>position: absolute 기본 02</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/position-absolute.css">
 </head>
 
 <body>
-    <style>
-        /* 절대 위치 */
-        .abs {
-            position: absolute;
-
-            top: 0;
-            right: 0;
-        }
-
-        /* 정사각형 */
-        .box {
-            width: 100px;
-            height: 100px;
-        }
-
-        /* 큰 정사각형 */
-        .big-box {
-            position: relative;
-            width: 300px;
-            height: 300px;
-        }
-
-        /* 배경색 A */
-        .a {
-            background-color: aquamarine;
-        }
-
-        /* 배경색 B */
-        .b {
-            background-color: bisque;
-        }
-    </style>
-
     <div class="big-box a">
         큰 사각형 A
-        <div class="box b abs">
-            정사각형 B
-        </div>
+        <div class="box b abs03"> 정사각형 B </div>
+    </div>
+
+    <div class="main">
+        <div class="popup">팝업입니당</div>
     </div>
 </body>
 
