--- a/10/animation_name.html
+++ b/10/animation_name.html
@@ -1,43 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>애니메이션 이름 animation-name</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/10/css/animation.css">
 </head>
 
 <body>
-    <style>
-        @keyframes zoom {
-            0% {
-                transform: scale(1) rotate(0);
-            }
-
-            50% {
-                transform: scale(1.5) rotate(90deg);
-            }
-
-            100% {
-                transform: scale(2) rotate(0);
-            }
-        }
-
-        .ani-btn {
-            /* 애니메이션을 위한 여백 */
-            margin: 64px;
-
-            /* 폭 */
-            width: 200px;
-
-            /* 글자 뿐만 아니라 애니메이션의 중심까지 설정 */
-            text-align: center;
-
-            animation-name: zoom;
-        }
-    </style>
-    <div class="ani-btn">
-        애니메이션
-    </div>
+    <!-- 기본형태
+    @keyframes 애니메이션이름 {
+        from{ css 속성들 01 }
+        40%{ css 속성들 02 }
+        70%{ css 속성들 03 }
+        to{ css 속성들 04 }
+    } -->
+    <!-- 어떠한 움직임을 묶은 keyframes에 이름을 부여하여, 요소의 속성에 해당 애니메이션을 쓰겠다고
+    이름을 부르면 된다. -->
+    <div class="ani-btn"> 애니메이션 </div>
 </body>
 
 </html>
