--- a/05/input_checked.html
+++ b/05/input_checked.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>기본체크 속성 checked</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
@@ -11,6 +12,11 @@
     <div>성별을 선택하세요.</div>
     <input type="radio" name="g" checked>남성
     <input type="radio" name="g">여성
+
+    <input type="checkbox">중성1
+    <input type="checkbox">중성2
+    <input type="checkbox" checked>중성3
+
 </body>
 
 </html>
