--- a/08/pseudoclass_enabled.html
+++ b/08/pseudoclass_enabled.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>활성 상태를 찾아내는 선택자 :enabled</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        /* 전체 선택자 + 가상 클래스 */
+        /* *:enabled {
+            background-color: aquamarine;
+        } */
+
+        *[enabled] {
+            background-color: aquamarine;
+        }
+
+        /* 이렇게 작성 불가 */
+    </style>
 </head>
 
 <body>
-    <style>
-        /* 전체 선택자 + 가상 클래스 */
-        *:enabled {
-            background-color: aquamarine;
-        }
-    </style>
 
     <input>
     <button>
