반응형과 미디어쿼리

--- a/11/responsive_media.html
+++ b/11/responsive_media.html
@@ -1,32 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>반응형웹을 위한 미디어쿼리 01</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/11/css/responsive_media.css">
 </head>
 
 <body>
-    <style>
-        .responsive-bg {
-            background-color: red;
-        }
-
-        /* 300px 이하 */
-        @media screen and (max-width: 300px) {
-            .responsive-bg {
-                background-color: yellow;
-            }
-        }
-
-        /* 400px 이상 */
-        @media screen and (min-width: 400px) {
-            .responsive-bg {
-                background-color: blue;
-            }
-        }
-    </style>
-
     <div class="responsive-bg">
         반응형 요소
     </div>
