--- a/09/grid-template-columns4.html
+++ b/09/grid-template-columns4.html
@@ -1,46 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>그리드에서 가변컬럼과 고정값이 섞여있을 때</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
-        /* 그리드 */
         .grid {
             display: grid;
-
             grid-template-columns: 150px 2fr 1fr
         }
 
         .grid>div {
-            /* 보라 배경색 */
             background-color: blueviolet;
             color: white;
-
-            /* 높이 설정 */
             height: 100px;
-
-            /* 테두리 */
             border: solid 1px black;
         }
     </style>
+</head>
+
+<body>
 
     <div class="grid">
-        <div>
-            첫 번째
-        </div>
-        <div>
-            두 번째는 폭이 세 번째의 2배!
-        </div>
-        <div>
-            세 번째
-        </div>
-        <div>
-            네 번째
-        </div>
+        <div> 첫 번째 </div>
+        <div> 두 번째는 폭이 세 번째의 2배! </div>
+        <div> 세 번째 </div>
+        <div> 네 번째 </div>
+        <div> 다섯 번째 </div>
     </div>
 </body>
 
