--- a/09/grid_align-content.html
+++ b/09/grid_align-content.html
@@ -1,59 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>그리드에서 사용하는 align-content</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/grid-align-content.css">
 </head>
 
 <body>
-    <style>
-        /* 그리드 */
-        .grid {
-            display: grid;
-
-            /* 150px 2개 */
-            grid-template-columns: 150px 150px;
-
-            /* 500px 정사각형 */
-            width: 500px;
-            height: 500px;
-
-            background-color: azure;
-
-            /* 그리드 아이템 기본 축 기준 중심 정렬 */
-            align-content: space-between;
-        }
-
-        .grid>div {
-            /* 보라 배경색 */
-            background-color: blueviolet;
-            color: white;
-
-            /* 높이 설정 */
-            height: 100px;
-
-            /* 테두리 */
-            border: solid 1px black;
-        }
-    </style>
-
+    <!-- 정렬의 개념을 사용할 때에는 부모가 hug가 아니고
+    여유공간이 있어야 한다. 상대적으로 공간이 있어야 가능한 개념! -->
     <div class="grid">
-        <div>
-            첫 번째
-        </div>
-        <div>
-            두 번째
-        </div>
-        <div>
-            세 번째
-        </div>
-        <div>
-            네 번째
-        </div>
-        <div>
-            다섯 번째
-        </div>
+        <div> 첫 번째 </div>
+        <div> 두 번째 </div>
+        <div> 세 번째 </div>
+        <div> 네 번째 </div>
+        <div> 다섯 번째 </div>
     </div>
 </body>
 
